# CppGame

./: .gitignore  CMakeLists.txt
src/: main.cpp
src/cmp/: component.hpp  entity.hpp  input.hpp  physics.hpp  render.cpp  render.hpp
src/lib/: CMakeLists.txt
src/man/: componentstorage.cpp  componentstorage.hpp  entitymanager.cpp  entitymanager.hpp
src/sys/: collision.cpp  collision.hpp  input.cpp  input.hpp  physics.cpp  physics.hpp  render.cpp  render.hpp
src/util/: gamecontext.hpp  keyboard.cpp  keyboard.hpp  typealiases.hpp
